package me.study.pattern.iterator;

public interface Aggregate {
    Iterator iterator();
}
