package me.study.pattern.iterator;

public interface Iterator {
    boolean hasNext();
    Object next();
}
